--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,76 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: "Open Sans";
+    src: url(/assets/fonts/open-sans/OpenSans-Regular.ttf) format("truetype");
+}
+
+@mixin button {
+    margin: 0.5625em 0.625em;
+    padding: 0.75em 1.3125em;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 0.875em;
+    line-height: 1.1875em;
+    letter-spacing: 0.005em;
+    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.08), 0px 4px 4px rgba(50, 50, 93, 0.11);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.08), 0px 4px 4px rgba(50, 50, 93, 0.11);
+    border-radius: 3px;
+}
+
+body {
+    //background: linear-gradient(340.03deg, #8ddad5 50%, #00cdac 50%);
+    font-family: "Open Sans", sans-serif !important;
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        color: #32325d;
+    }
+
+    p {
+        color: #525f7f;
+    }
+
+    #home,
+    #post-detail,
+    #profile-detail,
+    #footer {
+        .card {
+            background: #ffffff;
+            -webkit-box-shadow: 0px 15px 35px rgba(50, 50, 93, 0.1), 0px 5px 15px rgba(0, 0, 0, 0.07);
+            box-shadow: 0px 15px 35px rgba(50, 50, 93, 0.1), 0px 5px 15px rgba(0, 0, 0, 0.07);
+            border-radius: 4px;
+            min-height: 27.125em;
+            position: relative;
+            z-index: 1;
+
+            .card-body {
+                margin: 1.8125em 1.875em !important;
+                padding: 0 !important;
+
+                .row {
+                    margin: 0;
+                    padding: 1.1875em 0;
+
+                    .col {
+                        padding-left: 0;
+                        padding-right: 0;
+                    }
+                }
+            }
+        }
+    }
+
+    .modal-content {
+        -webkit-box-shadow: 0px 15px 35px rgba(50, 50, 93, 0.1), 0px 5px 15px rgba(0, 0, 0, 0.07);
+        box-shadow: 0px 15px 35px rgba(50, 50, 93, 0.1), 0px 5px 15px rgba(0, 0, 0, 0.07);
+        border-radius: 0.25em !important;
+    }
+}
+
+/* Importing Bootstrap SCSS file. */
+@import "~bootstrap/scss/bootstrap";
